Fix next and previous image button padding on iPhone

--- a/src/build-css/sass/style.scss
+++ b/src/build-css/sass/style.scss
@@ -141,7 +141,7 @@ img {
 	background: none;
 	cursor: pointer;
 	font-size: 50px;
-	flex: none;
+	padding: 1px 6px;
 }
 
 // Repsonsive youtube embed- trick from https://css-tricks.com/NetMag/FluidWidthVideo/Article-FluidWidthVideo.php
